--- a/requirements.txt
+++ b/requirements.txt
@@ -1,73 +1,155 @@
-amply @ file:///home/conda/feedstock_root/build_artifacts/amply_1687675480808/work
-asgiref @ file:///home/conda/feedstock_root/build_artifacts/asgiref_1711268871457/work
-asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1698341106958/work
-certifi @ file:///home/conda/feedstock_root/build_artifacts/certifi_1725278078093/work/certifi
-clarabel @ file:///D:/bld/clarabel_1709397278769/work
-colorama @ file:///home/conda/feedstock_root/build_artifacts/colorama_1666700638685/work
-comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1704278392174/work
-contourpy==1.0.7
-cupy @ file:///D:/bld/cupy-split_1721950359683/work
-cvxpy @ file:///D:/bld/cvxpy-split_1724065306113/work
-cycler==0.11.0
-debugpy @ file:///D:/bld/debugpy_1695534451132/work
-decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1641555617451/work
-Django @ file:///home/conda/feedstock_root/build_artifacts/django_1727685887191/work
-docutils @ file:///home/conda/feedstock_root/build_artifacts/docutils_1713930378730/work
-ecos @ file:///D:/bld/ecos_1718747728187/work
-exceptiongroup @ file:///home/conda/feedstock_root/build_artifacts/exceptiongroup_1704921103267/work
-executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1698579936712/work
-fastrlock @ file:///D:/bld/fastrlock_1702696481893/work
-fonttools==4.39.4
-gurobipy==11.0.3
-importlib-metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1703269254275/work
-ipykernel @ file:///D:/bld/ipykernel_1705418162861/work
-ipython @ file:///D:/bld/ipython_1706795789991/work
-jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1696326070614/work
-jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1699283905679/work
-jupyter_core @ file:///D:/bld/jupyter_core_1704727252411/work
-kiwisolver==1.4.4
-matplotlib==3.7.1
-matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1660814786464/work
-munkres==1.1.4
-nest_asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1705850609492/work
-networkx @ file:///home/conda/feedstock_root/build_artifacts/networkx_1698504735452/work
-numpy==1.24.3
-osqp @ file:///D:/bld/osqp_1685084466922/work
-packaging==23.1
-pandas @ file:///D:/bld/pandas_1715897782848/work
-parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1638334955874/work
-patsy @ file:///home/conda/feedstock_root/build_artifacts/patsy_1704469236901/work
-pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1602536217715/work
-Pillow==9.5.0
-platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1706713388748/work
-ply==3.11
-prompt-toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1702399386289/work
-psutil @ file:///D:/bld/psutil_1705722591889/work
-PuLP @ file:///D:/bld/pulp_1705064832196/work
-pure-eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1642875951954/work
-Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1700607939962/work
-pyparsing==3.0.9
-PyQt5==5.15.9
-PyQt5-sip @ file:///D:/bld/pyqt-split_1695417970429/work/pyqt_sip
-python-dateutil==2.8.2
-pytz @ file:///home/conda/feedstock_root/build_artifacts/pytz_1706886791323/work
-pywin32==306
-pyzmq @ file:///D:/bld/pyzmq_1701783313681/work
-qdldl @ file:///D:/bld/qdldl-python_1719722580152/work
-scipy @ file:///C:/bld/scipy-split_1720323100744/work/dist/scipy-1.14.0-cp311-cp311-win_amd64.whl#sha256=61ee96b8282a95e34b1d1a756728e0792b160306b197a3a01f20e6aa26edf6be
-scs @ file:///D:/bld/scs_1720395195354/work
-seaborn @ file:///home/conda/feedstock_root/build_artifacts/seaborn-split_1714494649443/work
-sip @ file:///D:/bld/sip_1697300573532/work
-six==1.16.0
-sqlparse @ file:///home/conda/feedstock_root/build_artifacts/sqlparse_1721304206023/work
-stack-data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1669632077133/work
-statsmodels @ file:///D:/bld/statsmodels_1715941378132/work
-toml @ file:///home/conda/feedstock_root/build_artifacts/toml_1604308577558/work
-tomli @ file:///home/conda/feedstock_root/build_artifacts/tomli_1644342247877/work
-tornado @ file:///D:/bld/tornado_1695373601455/work
-tqdm @ file:///home/conda/feedstock_root/build_artifacts/tqdm_1707598593068/work
-traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1704212992681/work
-typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1702176139754/work
-tzdata @ file:///home/conda/feedstock_root/build_artifacts/python-tzdata_1707747584337/work
-wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1704731205417/work
-zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1695255097490/work
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: win-64
+amply=0.1.6=pyhd8ed1ab_0
+asgiref=3.8.1=pyhd8ed1ab_0
+asttokens=2.4.1=pyhd8ed1ab_0
+brotli=1.1.0=hcfcfb64_1
+brotli-bin=1.1.0=hcfcfb64_1
+bzip2=1.0.8=hcfcfb64_5
+ca-certificates=2024.8.30=h56e8100_0
+certifi=2024.8.30=pyhd8ed1ab_0
+clarabel=0.7.1=py311h2282fe9_0
+colorama=0.4.6=pyhd8ed1ab_0
+comm=0.2.1=pyhd8ed1ab_0
+contourpy=1.2.0=py311h005e61a_0
+cuda-version=11.8=h70ddcb2_3
+cudatoolkit=11.8.0=h09e9e62_13
+cupy=13.2.0=py311h0508009_1
+cupy-core=13.2.0=py311ha6d0cfe_1
+cvxpy=1.5.3=py311h1ea47a8_0
+cvxpy-base=1.5.3=py311hcf9f919_0
+cycler=0.12.1=pyhd8ed1ab_0
+debugpy=1.8.0=py311h12c1d0e_1
+decorator=5.1.1=pyhd8ed1ab_0
+django=5.1.1=pyhd8ed1ab_1
+docutils=0.21.2=pyhd8ed1ab_0
+ecos=2.0.14=py311h0a17f05_0
+exceptiongroup=1.2.0=pyhd8ed1ab_2
+executing=2.0.1=pyhd8ed1ab_0
+fastrlock=0.8.2=py311h12c1d0e_2
+fonttools=4.47.2=py311ha68e1ae_0
+freetype=2.12.1=hdaf720e_2
+gettext=0.21.1=h5728263_0
+glib=2.78.3=h12be248_0
+glib-tools=2.78.3=h12be248_0
+glpk=5.0=h8ffe710_0
+gst-plugins-base=1.22.9=h001b923_0
+gstreamer=1.22.9=hb4038d2_0
+gurobi=11.0.3=py311_0
+icu=72.1=h63175ca_0
+importlib-metadata=7.0.1=pyha770c72_0
+importlib_metadata=7.0.1=hd8ed1ab_0
+intel-openmp=2024.0.0=h57928b3_49841
+ipykernel=6.29.0=pyha63f2e9_0
+ipython=8.21.0=pyh7428d3b_0
+jedi=0.19.1=pyhd8ed1ab_0
+jupyter_client=8.6.0=pyhd8ed1ab_0
+jupyter_core=5.7.1=py311h1ea47a8_0
+kiwisolver=1.4.5=py311h005e61a_1
+krb5=1.20.1=heb0366b_0
+lcms2=2.15=he9d350c_2
+lerc=4.0.0=h63175ca_0
+libblas=3.9.0=21_win64_mkl
+libbrotlicommon=1.1.0=hcfcfb64_1
+libbrotlidec=1.1.0=hcfcfb64_1
+libbrotlienc=1.1.0=hcfcfb64_1
+libcblas=3.9.0=21_win64_mkl
+libclang=16.0.6=default_hde6756a_4
+libclang13=16.0.6=default_h85b4d89_4
+libdeflate=1.19=hcfcfb64_0
+libexpat=2.5.0=h63175ca_1
+libffi=3.4.2=h8ffe710_5
+libglib=2.78.3=h16e383f_0
+libhwloc=2.9.3=default_haede6df_1009
+libiconv=1.17=hcfcfb64_2
+libjpeg-turbo=2.1.5.1=hcfcfb64_1
+liblapack=3.9.0=21_win64_mkl
+libogg=1.3.4=h8ffe710_1
+libpng=1.6.42=h19919ed_0
+libqdldl=0.1.7=h63175ca_0
+libsodium=1.0.18=h8d14728_1
+libsqlite=3.44.2=hcfcfb64_0
+libtiff=4.6.0=h4554b19_1
+libvorbis=1.3.7=h0e60522_0
+libwebp-base=1.3.2=hcfcfb64_0
+libxcb=1.15=hcd874cb_0
+libxml2=2.12.4=hc3477c8_1
+libzlib=1.2.13=hcfcfb64_5
+m2w64-gcc-libgfortran=5.3.0=6
+m2w64-gcc-libs=5.3.0=7
+m2w64-gcc-libs-core=5.3.0=7
+m2w64-gmp=6.1.0=2
+m2w64-libwinpthread-git=5.0.0.4634.697f757=2
+matplotlib=3.8.2=py311h1ea47a8_0
+matplotlib-base=3.8.2=py311h6e989c2_0
+matplotlib-inline=0.1.6=pyhd8ed1ab_0
+mkl=2024.0.0=h66d3029_49657
+msys2-conda-epoch=20160418=1
+munkres=1.1.4=pyh9f0ad1d_0
+nest-asyncio=1.6.0=pyhd8ed1ab_0
+networkx=3.2.1=pyhd8ed1ab_0
+numpy=1.26.3=py311h0b4df5a_0
+openjpeg=2.5.0=h3d672ee_3
+openssl=3.3.2=h2466b09_0
+osqp=0.6.3=py311hf63dbb6_0
+packaging=23.2=pyhd8ed1ab_0
+pandas=2.2.2=py311hcf9f919_1
+parso=0.8.3=pyhd8ed1ab_0
+patsy=0.5.6=pyhd8ed1ab_0
+pcre2=10.42=h17e33f8_0
+pickleshare=0.7.5=py_1003
+pillow=10.0.1=py311hd926f49_1
+pip=23.3.2=pyhd8ed1ab_0
+platformdirs=4.2.0=pyhd8ed1ab_0
+ply=3.11=py_1
+prompt-toolkit=3.0.42=pyha770c72_0
+psutil=5.9.8=py311ha68e1ae_0
+pthread-stubs=0.4=hcd874cb_1001
+pthreads-win32=2.9.1=hfa6e2cd_3
+pulp=2.8.0=py311h1ea47a8_0
+pure_eval=0.2.2=pyhd8ed1ab_0
+pygments=2.17.2=pyhd8ed1ab_0
+pyparsing=3.1.1=pyhd8ed1ab_0
+pyqt=5.15.9=py311h125bc19_5
+pyqt5-sip=12.12.2=py311h12c1d0e_5
+python=3.11.7=h2628c8c_1_cpython
+python-dateutil=2.8.2=pyhd8ed1ab_0
+python-tzdata=2024.1=pyhd8ed1ab_0
+python_abi=3.11=4_cp311
+pytz=2024.1=pyhd8ed1ab_0
+pywin32=306=py311h12c1d0e_2
+pyzmq=25.1.2=py311h9250fbb_0
+qdldl-python=0.1.7.post4=py311hcf9f919_0
+qt-main=5.15.8=h2c8576c_12
+scipy=1.14.0=py311hd4686c6_1
+scs=3.2.6=default_py311h1c6c4a6_0
+seaborn=0.13.2=hd8ed1ab_2
+seaborn-base=0.13.2=pyhd8ed1ab_2
+setuptools=69.0.3=pyhd8ed1ab_0
+sip=6.7.12=py311h12c1d0e_0
+six=1.16.0=pyh6c4a22f_0
+sqlparse=0.5.1=pyhd8ed1ab_0
+stack_data=0.6.2=pyhd8ed1ab_0
+statsmodels=0.14.2=py311h0a17f05_0
+tbb=2021.11.0=h91493d7_1
+tk=8.6.13=h5226925_1
+toml=0.10.2=pyhd8ed1ab_0
+tomli=2.0.1=pyhd8ed1ab_0
+tornado=6.3.3=py311ha68e1ae_1
+tqdm=4.66.2=pyhd8ed1ab_0
+traitlets=5.14.1=pyhd8ed1ab_0
+typing_extensions=4.9.0=pyha770c72_0
+tzdata=2023d=h0c530f3_0
+ucrt=10.0.22621.0=h57928b3_0
+vc=14.3=hcf57466_18
+vc14_runtime=14.38.33130=h82b7239_18
+vs2015_runtime=14.38.33130=hcb4865c_18
+wcwidth=0.2.13=pyhd8ed1ab_0
+wheel=0.42.0=pyhd8ed1ab_0
+xorg-libxau=1.0.11=hcd874cb_0
+xorg-libxdmcp=1.1.3=hcd874cb_0
+xz=5.2.6=h8d14728_0
+zeromq=4.3.5=h63175ca_0
+zipp=3.17.0=pyhd8ed1ab_0
+zstd=1.5.5=h12be248_0
